feat: setup personal portfolio

--- a/public/markdown/project/0.md
+++ b/public/markdown/project/0.md
@@ -1,7 +1,10 @@
-- Oh my, oh my God 예상했어 나
-  - I was really hoping that `he will come through`
-- Oh my, oh my God 단 너뿐이야
-  - Asking all the time about `what I should do`
-- No, I can never `let him go` 너만 생각나 `twenty-four` 난 행운아야 정말로 `I know, I know`
-- 널 알기 전까지는 나 `의미 없었어` 전부 다 **내 맘이 끝이 없는 걸** `I know, I know`
-- **I'm going crazy, right?**
+
+
+중고 거래 서비스 시나리오를 기반으로 **확장성과 무결성을 고려한 데이터베이스 구조를 설계**한 프로젝트입니다.  
+정규화 원칙을 적용하여 데이터 중복을 최소화하고, 사용자·상품·거래 흐름을 중심으로 관계를 정의했습니다.
+
+- 서비스 요구사항 분석을 통한 핵심 엔티티 도출
+- 3NF 기준 정규화 및 무결성 제약조건 설계
+- 거래, 리뷰, 신고 등 기능 확장을 고려한 구조 설계
+
+[프로젝트 상세 보기 →](./projects/used-market-db)
