--- a/public/markdown/project/1.md
+++ b/public/markdown/project/1.md
@@ -1,7 +1,9 @@
-- **‘Cause I know what you like boy**
-- **You're my chemical `hype boy`**
-- 내 지난날들은 눈 뜨면 잊는 꿈
-  - `Hype boy` 너만 원해 `Hype boy` 내가 전해
-- And we can go high **말해봐** yeah **느껴봐** mm mm
-- Take him to the sky
-- You know I `hype you boy`
+
+의료 데이터를 활용하여 **당뇨병 발병 여부를 예측하는 머신러닝 모델을 구축**한 프로젝트입니다.  
+여러 알고리즘을 비교하여 모델 성능을 평가하고 주요 변수의 영향도를 분석했습니다.
+
+- 데이터 전처리 및 결측치 처리
+- Logistic Regression, Random Forest 등 모델 비교
+- 정확도·재현율 기반 성능 평가 및 해석
+
+[프로젝트 상세 보기 →](./projects/diabetes-prediction)
