--- a/public/markdown/project/2.md
+++ b/public/markdown/project/2.md
@@ -1,7 +1,8 @@
-- Oh my, oh my God 예상했어 나
-  - I was really hoping that `he will come through`
-- Oh my, oh my God 단 너뿐이야
-  - Asking all the time about `what I should do`
-- No, I can never `let him go` 너만 생각나 `twenty-four` 난 행운아야 정말로 `I know, I know`
-- 널 알기 전까지는 나 `의미 없었어` 전부 다 **내 맘이 끝이 없는 걸** `I know, I know`
-- **I'm going crazy, right?**
+
+무인판매점 도난 사례를 분석하여 **기존 업무 프로세스의 문제점을 도출하고 개선된 TO-BE 프로세스를 설계**한 프로젝트입니다.
+
+- AS-IS 프로세스 모델링을 통한 병목 구간 분석
+- 도난 발생 시 대응 프로세스 재설계
+- 운영 효율성과 관리 가능성 향상
+
+[프로젝트 상세 보기 →](./projects/unmanned-store-process)
