--- a/public/markdown/project/3.md
+++ b/public/markdown/project/3.md
@@ -1,7 +1,9 @@
-- **‘Cause I know what you like boy**
-- **You're my chemical `hype boy`**
-- 내 지난날들은 눈 뜨면 잊는 꿈
-  - `Hype boy` 너만 원해 `Hype boy` 내가 전해
-- And we can go high **말해봐** yeah **느껴봐** mm mm
-- Take him to the sky
-- You know I `hype you boy`
+
+응급의료 접근성이 낮은 지역을 분석하여  
+**권역 외상 센터 입지 선정 및 닥터헬기 필요성을 데이터 기반으로 도출**한 프로젝트입니다.
+
+- 공공 의료 데이터 및 지역 통계 데이터 분석
+- 응급의료 취약 지표 정의 및 시각화
+- 정책적 의사결정을 지원하는 인사이트 도출
+
+[프로젝트 상세 보기 →](./projects/emergency-medical-analysis)
