--- a/public/markdown/project/6.md
+++ b/public/markdown/project/6.md
@@ -1,9 +1,76 @@
+# 💡 AI 수능 영어 학습 플랫폼 '메기스터디'
+> **"데이터 엔지니어의 관점에서: 서비스의 안정성과 데이터의 무결성을 최우선으로"**
 
-학습 서비스 이용 데이터를 분석하여  
-**사용자 행동 패턴을 도출하고 데이터 기반 서비스 개선 방향을 제안**한 프로젝트입니다.
+단순히 기능이 돌아가는 웹 서비스를 만드는 것을 넘어, **"실제 상용화 가능한 수준의 데이터 아키텍처는 무엇인가?"**를 치열하게 고민했던 프로젝트입니다. 
+DA(Data Architect)와 DBA를 지망하는 엔지니어로서, **보안(Security)**, **가용성(Availability)**, **비용 효율성(Cost)** 사이의 균형을 맞추는 데 집중했습니다.
 
-- 사용자 로그 데이터 분석
-- 주요 이탈 구간 및 이용 패턴 도출
-- 데이터 기반 서비스 개선 인사이트 제안
+---
 
-[프로젝트 상세 보기 →](./projects/megistudy-analysis)
+### 🏗️ 1. 아키텍처 설계: 왜 Azure Cloud Native인가?
+저는 초기 기획 단계에서 **"확장 가능하고 관리가 용이한 데이터 파이프라인"**을 목표로 삼았습니다.
+
+![전체 시스템 아키텍처](/images/megistudy_arch.png)
+
+* **의사결정 (Decision):** On-Premise 대신 **Azure Cloud Native** 환경을 선택했습니다.
+* **이유 (Why):** 1. **Azure OpenAI**와의 가장 빠르고 안전한 연결성 확보.
+    2. **Azure SQL Database**의 PaaS 기능을 활용해 백업, 패치 등 운영 리소스를 줄이고 **데이터 모델링과 쿼리 최적화에 집중**하기 위함.
+    3. **MS Fabric**을 통해 데이터 수집부터 분석까지 단일 환경에서 처리하여 파이프라인 복잡도 최소화.
+
+---
+
+### 🛡️ 2. 보안(Security): "공격당할 것을 가정하고 설계하라"
+프로젝트 도중, **"클라우드 DB는 공용 인터넷에 노출되기 쉽다"**는 점이 가장 큰 보안 리스크라고 판단했습니다. 이를 해결하기 위해 **Zero Trust** 원칙을 적용했습니다.
+
+#### 2-1. 네트워크 격리 (VNet & Private Endpoint)
+![VNet 보안 아키텍처](/images/megistudy_vnet.png)
+
+* **문제 (Problem):** 초기에는 DB 연결 편의성을 위해 공용 IP를 열어두었으나, 이는 잠재적 공격 경로가 됨을 인지했습니다.
+* **해결 (Action):** * **Azure VNet**을 구축하여 DB를 외부 인터넷망에서 완전히 격리했습니다.
+    * **Private Endpoint**를 통해 웹 서버(App Service)와 DB가 오직 내부 사설망으로만 통신하도록 터널링을 구현했습니다.
+* **배운 점 (Lesson):** 보안은 '기능'이 아니라 '구조'에서 온다는 것을 배웠습니다.
+
+---
+
+### 🔄 3. 가용성(HA): 데이터는 절대 멈추면 안 된다
+서비스가 중단되더라도 데이터는 살아있어야 한다는 신념으로 **재해 복구(DR) 전략**을 수립했습니다.
+
+![고가용성 설정 화면](/images/megistudy_ha.png)
+
+* **구현 (Action):** 한국 중부(Korea Central) 리전에 지진이나 화재가 발생하더라도, 한국 남부(Korea South) 리전으로 즉시 전환되도록 **Auto-Failover Groups**를 구성했습니다.
+* **성과 (Result):** 모의 장애 테스트 결과, **RPO(데이터 손실 시점) 5초 이내**로 방어하는 아키텍처를 완성했습니다.
+
+---
+
+### 🚨 4. 트러블 슈팅: 보안 사고 대응 리포트
+가장 기억에 남는 경험은 실제 운영 중 발생한 **SQL Injection 의심 정황을 탐지하고 막아낸 경험**입니다.
+
+![보안 위협 탐지 로그](/images/megistudy_trouble.png)
+
+#### 1️⃣ 상황 (Situation)
+로그 모니터링 중, 특정 해외 IP에서 `WHERE 1=1` 패턴을 포함하여 시스템 테이블(`sys.tables`)을 반복 조회하는 이상 징후를 포착했습니다.
+
+#### 2️⃣ 분석 및 조치 (Task & Action)
+* **즉시 대응:** 해당 IP 대역을 방화벽(Firewall)에서 영구 차단했습니다.
+* **근본 원인 분석:** 애플리케이션이 DB에 접속하는 계정이 `db_owner`라는 과도한 권한을 가지고 있어, 뚫릴 경우 DB 전체가 삭제될 위험이 있었습니다.
+* **개선:** **"최소 권한의 원칙(Principle of Least Privilege)"**을 적용하여, 앱 연동 계정에는 `SELECT`, `INSERT`, `UPDATE` 권한만 부여하고 `DROP`, `DELETE` 권한은 회수했습니다.
+
+#### 3️⃣ 결과 및 회고 (Result & Reflection)
+이후 동일한 시도가 있었으나 권한 부족으로 실패함을 확인했습니다. **"보안은 뚫린 후에 수습하는 것이 아니라, 뚫려도 피해를 최소화하도록 설계하는 것"**임을 뼈저리게 느꼈습니다.
+
+---
+
+### 💻 5. 서비스 구현 (UI/UX)
+백엔드 로직뿐만 아니라, 사용자가 데이터를 직관적으로 이해할 수 있도록 프론트엔드 개발도 주도했습니다.
+
+![서비스 UI 화면](/images/megistudy_ui.png)
+
+* **기여:** 사용자의 오답률 데이터를 시각화하여, 데이터가 단순한 숫자가 아닌 '인사이트'로 전달되도록 구현했습니다.
+
+---
+
+### 🚀 6. 프로젝트를 통해 성장한 점 (Growth)
+이 프로젝트는 저에게 단순한 개발 경험 그 이상이었습니다.
+
+1.  **DBA의 마인드셋:** 쿼리 하나를 짤 때도 "이것이 인덱스를 타는가?", "트랜잭션 락을 유발하지 않는가?"를 고민하는 습관을 길렀습니다.
+2.  **비용과 성능의 트레이드오프:** 고가용성을 위해 복제본(Replica)을 늘리면 비용이 2배가 됩니다. 프로젝트 예산 안에서 최적의 성능을 내기 위해 DTU(Database Transaction Unit) 모델을 분석하고 조정한 경험은 실무 감각을 키워주었습니다.
+3.  **데이터의 무게:** "데이터가 날아가면 서비스의 신뢰도 날아간다"는 책임감을 가지고 인프라를 설계하는 엔지니어로 성장했습니다.
