--- a/public/markdown/project/4.md
+++ b/public/markdown/project/4.md
@@ -1,8 +1,51 @@
+### **1. 프로젝트 개요**
 
-사용자 평점 데이터를 기반으로 **협업 필터링 기법을 활용한 영화 추천 시스템을 구현**한 프로젝트입니다.
+![서비스 시연 화면](/images/project/4_service.png)
+*(▲ 그림 1: 실제 구현된 영화 추천 웹 서비스 화면 - PDF 슬라이드 53)*
 
-- 사용자–아이템 행렬 기반 추천 로직 설계
-- 유사도 계산을 통한 추천 결과 도출
-- 추천 품질 개선을 위한 데이터 분석
+OTT 시장의 콘텐츠 홍수 속에서 사용자가 겪는 '선택 피로(Choice Fatigue)'를 해결하기 위해 시작된 프로젝트입니다. 단순히 인기 순위를 나열하는 것이 아니라, 사용자의 시청 이력(Sequence)을 문맥적으로 이해하여 **"다음에 볼 영화"**를 정교하게 예측하는 개인화 추천 시스템을 구축했습니다.
 
-[프로젝트 상세 보기 →](./projects/movie-recommendation)
+---
+
+### **2. 시스템 아키텍처 및 구현**
+
+![플랫폼 연동 구조](/images/project/4_arch.png)
+*(▲ 그림 2: Azure Databricks와 Flask 간의 시스템 연동 구조 - PDF 슬라이드 50)*
+
+대규모 데이터 처리를 위해 **Azure Databricks**를 메인 플랫폼으로 채택하고, 유연한 서비스 제공을 위해 **Flask** 웹 서버를 연동한 하이브리드 아키텍처를 설계했습니다.
+
+#### **(1) 데이터 파이프라인 (Databricks & Unity Catalog)**
+* [cite_start]**Unity Catalog:** MovieLens 32M, IMDB 등 다양한 원천 데이터를 통합 관리하고, 팀원 간의 데이터 접근 권한을 제어하여 보안성을 확보했습니다 [cite: 1918-1939].
+* **Spark ML Pipeline:** 데이터 전처리부터 모델 학습까지의 과정을 Spark Pipeline으로 구성하여 자동화했습니다.
+
+#### **(2) 모델 서빙 및 웹 서비스 (MLflow & Flask)**
+* [cite_start]**MLflow Model Serving:** 학습된 모델을 MLflow Registry에 등록하고, **Serving Endpoint**를 통해 REST API 형태로 배포했습니다 [cite: 3027-3045].
+* **Flask Web App:** Azure VM 위에 Flask 서버를 구축하여 사용자 인터페이스를 구현했습니다. [cite_start]사용자가 영화를 검색하면 MLflow API를 호출하여 실시간으로 추천 결과를 받아와 시각화합니다 [cite: 3091-3140].
+
+---
+
+### **3. 담당 역할: PM & MLOps Engineering**
+
+저는 6인 팀의 **PM(Project Manager)**으로서 프로젝트의 방향성을 수립하고 전체 일정을 리딩했습니다. 기술적으로는 팀원들이 모델 개발에 집중할 수 있도록 **Databricks 기반의 분석 환경을 구축**하고, **MLflow를 활용한 모델 실험 및 배포 파이프라인**을 전담했습니다.
+
+#### **(1) Databricks 기반 협업 환경 구축**
+* **Unified Analytics Platform:** 팀원들이 각자의 로컬 환경이 아닌, Azure Databricks라는 통일된 환경에서 데이터를 공유하고 코드를 작성할 수 있도록 워크스페이스와 클러스터를 구성했습니다.
+* **Data Management:** Unity Catalog를 도입하여 파편화된 영화 데이터셋(MovieLens, IMDB)을 중앙 집중식으로 관리하고, 전처리된 데이터를 Feature Store 형태로 팀원들에게 제공했습니다.
+
+#### **(2) MLflow를 활용한 모델 실험 관리 및 서빙**
+* [cite_start]**Experiment Tracking:** 팀원들이 개발한 다양한 모델(ALS, XGBoost, BERT 등)의 하이퍼파라미터와 성능 지표(Precision, Recall)를 **MLflow Tracking**으로 기록하여, 객관적인 모델 성능 비교가 가능하게 했습니다 [cite: 2675-2746].
+* **Model Registry & Serving:** 성능이 검증된 최종 모델(BERT4Rec)을 **Model Registry**에 버전별로 관리하고, 이를 **Model Serving** 기능을 통해 엔드포인트(REST API)로 배포하여 웹 서비스와의 연동을 책임졌습니다.
+
+---
+
+### **4. 최종 모델 선정: BERT4Rec**
+
+![BERT 아키텍처](/images/project/4_bert.png)
+*(▲ 그림 5: BERT4Rec 모델 구조 (Transformer Encoder) - PDF 슬라이드 42)*
+
+![성능 비교](/images/project/4_result.png)
+*(▲ 그림 6: 모델별 성능 비교표 (Precision, Recall) - PDF 슬라이드 47)*
+
+MLflow를 통해 수집된 실험 결과를 바탕으로, 다양한 알고리즘(ALS, XGBoost, Hybrid 등) 중 **BERT4Rec** 모델을 최종 선정했습니다.
+* **선정 이유:** 사용자의 시청 이력을 하나의 '문장'으로, 영화를 '단어'로 간주하여 **양방향 문맥(Bidirectional Context)**을 학습함으로써, 다음에 시청할 영화를 가장 정확하게 예측했습니다.
+* **성능:** Precision@10 **0.86**, Recall@10 **0.86**으로 다른 모델 대비 압도적인 정확도를 달성했습니다.
