--- a/public/markdown/project/6.md
+++ b/public/markdown/project/6.md
@@ -1,76 +1,109 @@
 # 💡 AI 수능 영어 학습 플랫폼 '메기스터디'
-> **"데이터 엔지니어의 관점에서: 서비스의 안정성과 데이터의 무결성을 최우선으로"**
 
-단순히 기능이 돌아가는 웹 서비스를 만드는 것을 넘어, **"실제 상용화 가능한 수준의 데이터 아키텍처는 무엇인가?"**를 치열하게 고민했던 프로젝트입니다. 
-DA(Data Architect)와 DBA를 지망하는 엔지니어로서, **보안(Security)**, **가용성(Availability)**, **비용 효율성(Cost)** 사이의 균형을 맞추는 데 집중했습니다.
+> **"Azure PaaS를 활용하여 보안, 가용성, AI 기능을 통합한 차세대 학습 플랫폼 구축"**
 
 ---
 
-### 🏗️ 1. 아키텍처 설계: 왜 Azure Cloud Native인가?
-저는 초기 기획 단계에서 **"확장 가능하고 관리가 용이한 데이터 파이프라인"**을 목표로 삼았습니다.
+### **0. Service Overview**
 
-![전체 시스템 아키텍처](/images/megistudy_arch.png)
+**"매일 꾸준히, AI와 함께 성장하는 영어 루틴"**
 
-* **의사결정 (Decision):** On-Premise 대신 **Azure Cloud Native** 환경을 선택했습니다.
-* **이유 (Why):** 1. **Azure OpenAI**와의 가장 빠르고 안전한 연결성 확보.
-    2. **Azure SQL Database**의 PaaS 기능을 활용해 백업, 패치 등 운영 리소스를 줄이고 **데이터 모델링과 쿼리 최적화에 집중**하기 위함.
-    3. **MS Fabric**을 통해 데이터 수집부터 분석까지 단일 환경에서 처리하여 파이프라인 복잡도 최소화.
+메기스터디는 사용자가 매일 수능 영어 문제를 풀고, AI 튜터에게 즉각적인 피드백을 받아 약점을 보완하는 **맞춤형 학습 플랫폼**입니다.
 
----
+<div style="display: flex; justify-content: space-between; gap: 10px; margin-top: 20px;">
+  <img src="/images/project/6_service_main.png" width="49%" alt="서비스 메인" />
+  <img src="/images/project/6_qbank.png" width="49%" alt="문제 은행" />
+</div>
+<p align="center" style="color: gray; font-size: 0.9em; margin-top: 5px;">▲ 서비스 랜딩 페이지 및 난이도별 문제 필터링 화면</p>
 
-### 🛡️ 2. 보안(Security): "공격당할 것을 가정하고 설계하라"
-프로젝트 도중, **"클라우드 DB는 공용 인터넷에 노출되기 쉽다"**는 점이 가장 큰 보안 리스크라고 판단했습니다. 이를 해결하기 위해 **Zero Trust** 원칙을 적용했습니다.
+**[핵심 기능 Flow]**
+1. **문제 풀이:** 사용자는 본인의 수준(Easy/Medium/Hard)에 맞는 기출 문제를 선택하여 풀이합니다.
+2. **AI 분석:** 오답이 발생하면 AI 튜터가 즉시 개입하여 오답 원인을 분석하고 해설을 제공합니다.
+3. **맞춤 학습:** 분석된 데이터를 바탕으로 AI가 사용자의 약점을 보완할 수 있는 문제를 생성합니다.
 
-#### 2-1. 네트워크 격리 (VNet & Private Endpoint)
-![VNet 보안 아키텍처](/images/megistudy_vnet.png)
+<div style="display: flex; justify-content: space-between; gap: 10px; margin-top: 20px;">
+  <img src="/images/project/6_service_ai.png" width="49%" alt="AI 피드백" />
+  <img src="/images/project/6_ai_modal.png" width="49%" alt="약점 분석" />
+</div>
+<p align="center" style="color: gray; font-size: 0.9em; margin-top: 5px;">▲ AI 튜터의 실시간 피드백 및 사용자 약점 분석 리포트</p>
 
-* **문제 (Problem):** 초기에는 DB 연결 편의성을 위해 공용 IP를 열어두었으나, 이는 잠재적 공격 경로가 됨을 인지했습니다.
-* **해결 (Action):** * **Azure VNet**을 구축하여 DB를 외부 인터넷망에서 완전히 격리했습니다.
-    * **Private Endpoint**를 통해 웹 서버(App Service)와 DB가 오직 내부 사설망으로만 통신하도록 터널링을 구현했습니다.
-* **배운 점 (Lesson):** 보안은 '기능'이 아니라 '구조'에서 온다는 것을 배웠습니다.
 
----
+**[시나리오 및 문제 정의]**
+실제 교육 현장에서는 학습 데이터가 로컬 서버(On-Premise)에 고립되어 있고, 문제지나 해설지가 PDF, HWP 같은 비정형 형태로 흩어져 있어 데이터 활용이 어려웠습니다.
+저희 팀은 **"로컬 환경의 데이터를 클라우드로 통합하고, 비정형 데이터를 자산화하여 AI 기반의 맞춤형 학습 서비스를 제공"**하는 것을 목표로 했습니다.
 
-### 🔄 3. 가용성(HA): 데이터는 절대 멈추면 안 된다
-서비스가 중단되더라도 데이터는 살아있어야 한다는 신념으로 **재해 복구(DR) 전략**을 수립했습니다.
-
-![고가용성 설정 화면](/images/megistudy_ha.png)
-
-* **구현 (Action):** 한국 중부(Korea Central) 리전에 지진이나 화재가 발생하더라도, 한국 남부(Korea South) 리전으로 즉시 전환되도록 **Auto-Failover Groups**를 구성했습니다.
-* **성과 (Result):** 모의 장애 테스트 결과, **RPO(데이터 손실 시점) 5초 이내**로 방어하는 아키텍처를 완성했습니다.
-
----
-
-### 🚨 4. 트러블 슈팅: 보안 사고 대응 리포트
-가장 기억에 남는 경험은 실제 운영 중 발생한 **SQL Injection 의심 정황을 탐지하고 막아낸 경험**입니다.
-
-![보안 위협 탐지 로그](/images/megistudy_trouble.png)
-
-#### 1️⃣ 상황 (Situation)
-로그 모니터링 중, 특정 해외 IP에서 `WHERE 1=1` 패턴을 포함하여 시스템 테이블(`sys.tables`)을 반복 조회하는 이상 징후를 포착했습니다.
-
-#### 2️⃣ 분석 및 조치 (Task & Action)
-* **즉시 대응:** 해당 IP 대역을 방화벽(Firewall)에서 영구 차단했습니다.
-* **근본 원인 분석:** 애플리케이션이 DB에 접속하는 계정이 `db_owner`라는 과도한 권한을 가지고 있어, 뚫릴 경우 DB 전체가 삭제될 위험이 있었습니다.
-* **개선:** **"최소 권한의 원칙(Principle of Least Privilege)"**을 적용하여, 앱 연동 계정에는 `SELECT`, `INSERT`, `UPDATE` 권한만 부여하고 `DROP`, `DELETE` 권한은 회수했습니다.
-
-#### 3️⃣ 결과 및 회고 (Result & Reflection)
-이후 동일한 시도가 있었으나 권한 부족으로 실패함을 확인했습니다. **"보안은 뚫린 후에 수습하는 것이 아니라, 뚫려도 피해를 최소화하도록 설계하는 것"**임을 뼈저리게 느꼈습니다.
+**[핵심 목표]**
+1.  **데이터 자산화 (Data Assetization):** **Azure Document Intelligence**를 활용하여 비정형 PDF 데이터(문제, 해설, 듣기대본)를 구조화하고 **Azure SQL Database**에 적재하여 활용 가능한 디지털 자산으로 구축.
+2.  **AI 기반 학습 플랫폼 구현:** 구축된 문제은행 데이터를 바탕으로 학생 수준에 맞는 문제를 추천하고 피드백을 제공하는 **Intelligent App** 개발.
+3.  **하이브리드 클라우드 이관:** 로컬 SQL Server의 데이터를 **Azure SQL Database**로 무중단 이관하여 운영 효율성 및 확장성 확보.
+4.  **엔터프라이즈급 데이터 보안:** TDE, DDM 등 Azure PaaS의 보안 기능을 활용해 **개인정보 보호 및 데이터 무결성** 완벽 보장.
 
 ---
 
-### 💻 5. 서비스 구현 (UI/UX)
-백엔드 로직뿐만 아니라, 사용자가 데이터를 직관적으로 이해할 수 있도록 프론트엔드 개발도 주도했습니다.
+### **2. 시스템 아키텍처 및 데이터 파이프라인**
 
-![서비스 UI 화면](/images/megistudy_ui.png)
+![전체 시스템 아키텍처](/images/project/6_arch.png)
+*(▲ 전체 시스템 아키텍처)*
 
-* **기여:** 사용자의 오답률 데이터를 시각화하여, 데이터가 단순한 숫자가 아닌 '인사이트'로 전달되도록 구현했습니다.
+**[Data Extraction with Document Intelligence]**
+
+![데이터 전처리 파이프라인](/images/project/6_doc_intel.png)
+*(▲ Azure Document Intelligence를 활용한 비정형 데이터 처리 흐름)*
+
+* **비정형 데이터 구조화:** 수능 기출 문제 PDF는 텍스트, 이미지, 표, 다단 편집이 복잡하게 섞여 있어 일반적인 OCR로는 데이터화가 불가능했습니다.
+* **ETL 구현:** **Azure Document Intelligence**의 레이아웃 분석 기능을 활용하여 문서의 구조를 인식하고, 문제(Question), 지문(Passage), 선택지(Options), 해설(Explanation)을 각각 분리하여 정형화된 JSON 데이터로 변환했습니다.
+* **데이터 적재:** 변환된 데이터는 **Azure SQL Database**에 적재되어, 서비스 내 문제 은행(Question Bank) 기능과 AI 모델의 지식 베이스(Knowledge Base)로 활용되었습니다.
+
+**[Service Layer]**
+* **Application:** Next.js와 FastAPI를 연동하여 사용자 대시보드 및 AI 튜터 서비스 구현.
 
 ---
 
-### 🚀 6. 프로젝트를 통해 성장한 점 (Growth)
-이 프로젝트는 저에게 단순한 개발 경험 그 이상이었습니다.
+### **3. 핵심 구현 내용 (Database & Security)**
 
-1.  **DBA의 마인드셋:** 쿼리 하나를 짤 때도 "이것이 인덱스를 타는가?", "트랜잭션 락을 유발하지 않는가?"를 고민하는 습관을 길렀습니다.
-2.  **비용과 성능의 트레이드오프:** 고가용성을 위해 복제본(Replica)을 늘리면 비용이 2배가 됩니다. 프로젝트 예산 안에서 최적의 성능을 내기 위해 DTU(Database Transaction Unit) 모델을 분석하고 조정한 경험은 실무 감각을 키워주었습니다.
-3.  **데이터의 무게:** "데이터가 날아가면 서비스의 신뢰도 날아간다"는 책임감을 가지고 인프라를 설계하는 엔지니어로 성장했습니다.
+저는 **Infra & Security** 담당자로서, 서비스의 안정성과 데이터 보안을 책임지는 아키텍처를 설계했습니다.
+
+#### **(1) 무중단 마이그레이션 (Local to Cloud)**
+![DB 마이그레이션 구조](/images/project/6_dms.png)
+*(▲ Azure DMS를 활용한 이관 구조)*
+
+* **구현:** **Azure Database Migration Service(DMS)**를 사용하여 로컬 SQL Server와 Azure SQL 간의 실시간 데이터 동기화 파이프라인을 구축했습니다.
+* **성과:** 서비스 운영 중에도 데이터 변경분(CDC)을 실시간으로 반영하여, 최종 전환 시 **서비스 다운타임(Downtime)을 제로에 가깝게** 최소화했습니다.
+
+#### **(2) 데이터 보안 및 규정 준수 (Compliance & HA)**
+![보안 및 고가용성 설정](/images/project/6_security.png)
+*(▲ DDM, TDE, 백업 설정 화면)*
+
+* **동적 데이터 마스킹 (DDM):** `Email` 등 민감한 개인정보 컬럼에 마스킹 정책을 적용하여, 권한이 없는 관리자나 애플리케이션에서는 `aXXX@XXXX.com` 형태로만 보이도록 조치했습니다.
+* **투명한 데이터 암호화 (TDE):** 데이터베이스 파일, 로그, 백업 파일 등 디스크에 저장되는 모든 데이터를 실시간으로 암호화하여 물리적 탈취 시에도 데이터를 보호했습니다.
+* **자동 백업 및 PITR:** Azure SQL의 자동 백업 기능을 활성화하고, 14일간의 시점 복구(Point-In-Time Restore)를 구성하여 데이터 손실 사고에 대비했습니다.
+* **무중단 서비스 운영 (Failover):** 특정 서버나 데이터 센터에 장애가 발생하더라도, 서비스 중단 없이 자동으로 예비 서버로 전환(Failover)되는 **Auto-Failover Group**을 구성하여 **99.99% 이상의 가용성**을 보장했습니다.
+
+#### **(3) 네트워크 격리 및 접근 제어**
+![VNet 보안 아키텍처](/images/project/6_vnet.png)
+*(▲ VNet과 Private Endpoint 구성)*
+
+* **VNet Integration:** 데이터베이스를 **Azure VNet** 내부에 배치하여 공용 인터넷을 통한 직접 접근을 원천 차단했습니다.
+* **RBAC (역할 기반 접근 제어):** 웹 애플리케이션 계정에는 `SELECT`, `INSERT`, `UPDATE` 권한만 부여하고, `DELETE`, `DROP` 권한은 회수하여 해킹 시 데이터 파괴 위험을 방지했습니다.
+
+---
+
+### **4. 트러블 슈팅 (Troubleshooting)**
+
+#### **🚨 실전 보안 위협 대응: "1%의 가능성도 차단하라"**
+![보안 위협 탐지 로그](/images/project/6_log.png)
+*(▲ Log Analytics의 위협 탐지 로그)*
+
+**[상황: 의문의 경고 알림]**
+프로젝트 마무리 단계에서 설정해둔 위협 탐지(Threat Detection) 알람이 울렸습니다. 확인 결과, 알 수 없는 IP에서 관리자 계정으로 `WHERE 1=1` 패턴을 포함하여 시스템 테이블(`sys.tables`)을 조회하는 쿼리가 다수 발견되었습니다.
+
+**[분석 및 의사결정]**
+초기에는 Azure 내부 리소스(Power BI 등)가 메타데이터를 수집하는 과정에서 발생한 정상적인 쿼리일 가능성도 있어 보였습니다. 하지만 정확한 판단을 위해 보안 실무자에게 자문을 구했습니다.
+> *"내부 쿼리일 수도 있지만, 공격자가 DB 구조를 파악하기 위해 수행하는 **정찰(Reconnaissance) 단계**와 패턴이 매우 유사합니다."*
+
+이 조언을 듣고 **"1%의 공격 가능성이라도 있다면 예방하는 것이 보안의 첫걸음"**이라는 원칙하에 즉각적인 방어 조치에 들어갔습니다.
+
+**[조치 및 결과]**
+1.  **방화벽 차단:** Azure Firewall 정책을 업데이트하여 해당 IP 대역의 접근을 영구 차단했습니다.
+2.  **권한 축소 (Least Privilege):** 만에 하나 애플리케이션 계정이 탈취되더라도 DB를 삭제할 수 없도록, 연결 계정에서 `DROP`, `TRUNCATE` 권한을 즉시 회수하고 `SELECT`, `INSERT` 등 필수 권한만 남겼습니다.
+3.  **경고 규칙 최적화:** 향후 유사한 혼동을 막기 위해, 단순 조회와 실제 공격 패턴(SQL Injection)을 더 정교하게 구분할 수 있도록 경고 규칙(Alert Rule)을 세분화했습니다.
