--- a/public/markdown/project/5.md
+++ b/public/markdown/project/5.md
@@ -1,86 +1,119 @@
 # 💡 실시간 고객 분석 및 RAG 기반 지능형 마케팅 시스템
 
-> **"데이터 지연을 제거하고, 머신러닝 기반의 고객 세분화와 자연어 질의 인터페이스를 결합한 실시간 데이터 플랫폼"**
+> <strong>"데이터 지연을 제거하고, 머신러닝 기반의 고객 세분화와 자연어 질의 인터페이스를 결합한 실시간 데이터 플랫폼"</strong>
 
 ---
 
-### **0. 서비스 개요 (Service Overview)**
+### 📑 목차 (Table of Contents)
+1. [서비스 개요](#0-서비스-개요-service-overview)
+2. [프로젝트 배경 및 목표](#1-프로젝트-배경-및-목표)
+3. [시스템 아키텍처](#2-시스템-아키텍처-architecture)
+4. [핵심 구현 내용](#3-핵심-구현-내용-real-time--rag)
+5. [트러블 슈팅](#4-트러블-슈팅-troubleshooting)
+6. [프로젝트 성과 및 회고](#5-프로젝트-성과-및-회고-retrospective)
 
-**"데이터 발생부터 마케팅 액션까지, 실시간 지능형 루틴"**
+---
 
-본 시스템은 이커머스 환경에서 발생하는 주문 로그를 실시간으로 수집·가공하고, 머신러닝 모델을 통해 고객 등급을 즉각 업데이트합니다.
+### 0. 서비스 개요 (Service Overview)
+
+<strong>"데이터 발생부터 마케팅 액션까지, 실시간 지능형 루틴"</strong>
+
+본 시스템은 이커머스 환경에서 발생하는 주문 로그를 실시간으로 수집·가공하고, 머신러닝 모델을 통해 고객 등급을 즉시 업데이트합니다. 마케터는 복잡한 쿼리 없이 챗봇을 통해 실시간 지표를 조회하고 개인화된 마케팅 전략을 즉각 제안받을 수 있습니다.
 
 ![실시간 데이터 유입 및 수집](/images/project/5_flow.png)
-*(▲ Flask 기반 주문 시뮬레이션 및 실시간 데이터 수집 흐름)*
+(▲ Flask 기반 주문 시뮬레이션 및 실시간 데이터 수집 흐름)
 
 ![RAG 응답 인터페이스](/images/project/5_rag_ex.png)
-*(▲ RAG 기반의 자연어 데이터 조회 및 마케팅 인사이트 도출 화면)*
+(▲ RAG 기반의 자연어 데이터 조회 및 마케팅 인사이트 도출 화면)
 
-**[핵심 기능 흐름]**
-1.  [cite_start]**실시간 수집:** 대규모 구매 로그를 Azure Event Hub로 수집하고 Stream Analytics로 정제합니다. [cite: 788-790, 836]
-2.  [cite_start]**지능형 분류:** 수집된 데이터를 바탕으로 RFM 지표를 실시간 계산하고, GMM 모델을 통해 고객 군집을 업데이트합니다. [cite: 80, 247]
-3.  [cite_start]**자연어 질의(RAG):** 마케터는 "VIP 고객들의 특징은?"과 같은 자연어 질문으로 실시간 데이터 분석 결과를 즉시 조회할 수 있습니다. [cite: 1148-1152, 1201]
-
----
-
-### **1. 프로젝트 배경 및 목표**
-
-**[문제 정의]**
-[cite_start]기존 배치 처리 시스템은 결과 도출까지 수 시간의 시차가 발생하여, 고객의 구매 결정 시점에 맞춘 즉각적인 마케팅 프로모션이 어렵다는 한계가 있었습니다. [cite: 25, 488]
-
-**[핵심 목표]**
-1.  [cite_start]**실시간성 확보:** 데이터 발생부터 분석까지의 지연(Latency)을 최소화하는 파이프라인 구축. [cite: 29, 492]
-2.  [cite_start]**정밀한 고객 세분화:** 단순 통계가 아닌 머신러닝(GMM)을 활용한 정교한 고객 군집화. [cite: 247, 368-370]
-3.  [cite_start]**데이터 접근성 혁신:** RAG 기술을 도입하여 기술 지식이 없는 사용자도 자연어로 데이터를 탐색할 수 있는 환경 제공. [cite: 1148-1151, 1618]
+<strong>[핵심 기능 흐름]</strong>
+1. <strong>실시간 수집:</strong> 대규모 구매 로그를 Azure Event Hub로 수집하고 Stream Analytics로 정제합니다.
+2. <strong>지능형 분류:</strong> 수집된 데이터를 바탕으로 RFM 지표를 실시간 계산하고, GMM 모델을 통해 고객 군집을 업데이트합니다.
+3. <strong>자연어 질의(RAG):</strong> 마케터는 "VIP 고객들의 특징은?"과 같은 자연어 질문으로 실시간 데이터 분석 결과를 즉시 조회할 수 있습니다.
 
 ---
 
-### **2. 시스템 아키텍처 (Architecture)**
+### 1. 프로젝트 배경 및 목표
+
+<strong>[문제 정의: 리텐션의 경제성]</strong>
+하버드 비즈니스 리뷰에 따르면 신규 고객 유치 비용은 기존 고객 유지 비용보다 5~25배 더 높습니다. 기존 고객 유지율을 5%만 높여도 기업 이익은 25~95% 증가할 수 있습니다. 하지만 기존의 배치(Batch) 처리 방식은 분석 결과가 도출되기까지 시차가 발생하여 즉각적인 리텐션 마케팅이 불가능했습니다.
+
+<strong>[핵심 목표]</strong>
+1. <strong>실시간 파이프라인 구축:</strong> 데이터 발생부터 분석까지의 지연(Latency)을 최소화하여 고객 행동에 즉각 대응.
+2. <strong>정밀한 고객 세분화:</strong> 단순 통계가 아닌 GMM(Gaussian Mixture Model)을 활용해 타겟팅 정확도 향상.
+3. <strong>운영 효율성 증대:</strong> 서버리스 구조(Azure Functions)를 채택하여 인프라 운영 비용 절감 및 확장성 확보.
+
+---
+
+### 2. 시스템 아키텍처 (Architecture)
 
 ![전체 시스템 아키텍처](/images/project/5_arch.png)
-[cite_start]*(▲ Azure PaaS 기반의 실시간 데이터 처리 아키텍처)* [cite: 22, 176]
+(▲ Azure PaaS 기반의 실시간 데이터 처리 아키텍처)
+
+본 프로젝트는 UCI Machine Learning Repository의 Online Retail 데이터를 활용하여 약 54만 건의 실제 거래 데이터를 실시간 스트리밍 환경에서 처리할 수 있도록 설계되었습니다. Azure의 서버리스 기술을 적극 활용하여 데이터 파이프라인의 자동화를 구현했습니다.
 
 ---
 
-### **3. 핵심 구현 내용 (Real-time & RAG)**
+### 3. 핵심 구현 내용 (Real-time & RAG)
 
-[cite_start]저는 프로젝트의 핵심인 **실시간 데이터 처리 로직과 RAG 인터페이스 구현** 전반을 주도했습니다. [cite: 40-44]
-
-#### **(1) 머신러닝 모델 고도화: K-Means에서 GMM으로**
+#### (1) 머신러닝 모델 고도화: K-Means에서 GMM으로
 ![K-Means 분석 결과](/images/project/5_modeling_kmeans.png)
-[cite_start]*(▲ K-Means 알고리즘을 활용한 초기 분석 과정)* [cite: 245, 350-354]
+(▲ K-Means 알고리즘 설명 및 엘보우 포인트 분석 과정)
 
-* [cite_start]**초기 시도:** 직관적인 K-Means 모델을 사용했으나, 군집을 구형으로 가정하는 특성상 실제 데이터의 복잡한 타원형 분포를 반영하기 어려웠습니다. [cite: 245, 367]
+* <strong>K-Means의 한계:</strong> 초기에는 구형(Spherical) 군집 형성에 강한 K-Means를 적용했으나, 고객의 가중치 분포가 타원형(Elliptical)을 띠는 실제 특성을 반영하지 못해 경계면 오분류가 발생했습니다.
+* <strong>GMM(Gaussian Mixture Model) 최종 채택:</strong> 데이터의 확률 분포를 기반으로 하는 GMM을 도입하여 비구형 분포 문제를 해결했습니다. 특히 <strong>소프트 클러스터링</strong>을 통해 특정 군집에 속할 확률(Prob_3, Prob_4)을 도출함으로써 마케팅 우선순위를 정밀하게 산정했습니다.
 
-![GMM 분석 및 지표](/images/project/5_modeling_gmm.png)
-[cite_start]*(▲ GMM 도입 후 성능 지표 개선 결과)* [cite: 247, 368]
+#### (2) 이벤트 기반 실시간 데이터 파이프라인
+* <strong>Stream Analytics 전처리:</strong> SQL 기반 쿼리를 작성하여 구매 로그의 데이터 타입을 검증하고 CAST 연산을 통해 실시간 정제를 수행했습니다.
+* <strong>Azure Functions 트리거:</strong> Cosmos DB의 <strong>Change Feed</strong> 기능을 활용하여 주문 로그 적재 즉시 분석 함수가 실행되도록 구현했습니다. 이 함수는 해당 고객의 누적 RFM 데이터를 재계산하고 등급을 즉시 갱신합니다.
 
-* [cite_start]**최종 채택:** 비구형 분포와 경계 중첩 문제를 해결하기 위해 **Gaussian Mixture Model(GMM)**을 도입했습니다. [cite: 247, 368-372] [cite_start]확률 기반의 소프트 클러스터링을 통해 경계면에 있는 고객들까지 유연하게 타겟팅할 수 있는 기반을 마련했습니다. [cite: 378, 427]
-
-#### **(2) 이벤트 기반 실시간 등급 갱신 (Azure Functions)**
-* [cite_start]**구현:** Cosmos DB의 Change Feed 기능을 활용하여 주문 로그가 적재되는 즉시 Azure Functions가 실행되도록 설계했습니다. [cite: 936-942]
-* [cite_start]**로직:** 해당 함수는 고객의 RFM 점수를 재계산하고, GMM 모델 기준에 따라 고객 등급을 실시간으로 업데이트합니다. [cite: 224, 233-240, 935]
-
-#### **(3) RAG(검색 증강 생성) 질의 인터페이스**
+#### (3) RAG(검색 증강 생성) 시스템 구축
 ![RAG 아키텍처](/images/project/5_rag.png)
-[cite_start]*(▲ 실시간 데이터와 LLM을 결합한 RAG 시스템 구조)* [cite: 1148, 1154-1161]
+(▲ 실시간 데이터와 LLM을 결합한 RAG 시스템 구조)
+
+* <strong>벡터 임베딩:</strong> 갱신된 고객 등급과 구매 내역 정보를 텍스트 데이터로 변환하여 벡터 DB에 실시간 저장했습니다.
+* <strong>질의 응답 로직:</strong> 마케터가 자연어로 질문하면 관련 데이터를 추출해 GPT 프롬프트의 컨텍스트로 주입하여 할루시네이션(환각) 없는 답변을 생성합니다.
 
 ---
 
-### **4. 트러블 슈팅 (Troubleshooting)**
+### 4. 트러블 슈팅 (Troubleshooting)
 
-#### **🚨 RAG 검색 정확도 개선: "의도 기반 프롬프트 분기 전략"**
+#### 🚨 RAG 검색 정확도 개선: "의도 기반 프롬프트 분기 전략"
 
-![의도 파악 및 프롬프트 분기 로직](/images/project/5_trouble_code.png)
-[cite_start]*(▲ 사용자 질문의 의도를 분석하여 적절한 프롬프트를 선택하는 파이썬 로직)* [cite: 1181, 1639]
+<div style="text-align: center; margin: 20px 0;">
+  <img src="/images/project/5_trouble_code.png" width="60%" alt="의도 파악 및 프롬프트 분기 로직" style="border-radius: 8px; border: 1px solid #ddd;" />
+  <p style="color: gray; font-size: 0.9em; margin-top: 5px;">▲ 질문의 의도를 분석하여 적절한 프롬프트를 선택하는 파이썬 로직</p>
+</div>
 
-**[문제 상황]**
-[cite_start]초기 시스템에서 특정 고객이나 등급에 대해 질문할 때, LLM이 다른 그룹의 데이터를 참조하거나 여러 정보가 뒤섞여 답변의 신뢰도가 떨어지는 현상이 발생했습니다. 
+<strong>[문제 상황]</strong>
+초기 구축 시 "특정 ID 고객 요약" 요청과 "특정 등급의 통계 정보" 요청을 LLM이 혼동하여 엉뚱한 레코드를 조회하거나 데이터를 뒤섞어 답변하는 현상이 발견되었습니다.
 
-**[해결 과정]**
-[cite_start]단순 벡터 유사도 검색의 한계를 보완하기 위해, 검색 이전에 질문의 의도를 파악하여 범위를 한정하는 로직을 도입했습니다. [cite: 1179-1180, 1639]
-1. [cite_start]**의도 추출(Intent Extraction):** 질문에서 '요약', '등급', '전략', '메시지' 등 키워드를 분석하여 사용자의 질문 목적을 추론합니다. [cite: 1172-1178, 1181-1182]
-2. [cite_start]**프롬프트 분기(Prompt Branching):** 추론된 목적에 따라 검색 범위를 물리적으로 제한하거나, 마케팅 전략 수립/메시지 작성 등 특화된 프롬프트를 적용하도록 설계했습니다. [cite: 1183-1194, 1639]
+<strong>[해결 과정]</strong>
+단순 벡터 유사도 검색의 한계를 보완하기 위해, 검색 이전 단계에서 질문의 의도를 분석하여 검색 범위를 물리적으로 한정하는 로직을 도입했습니다.
+1. <strong>의도 파악 함수(infer_purpose):</strong> 질문 내 키워드('요약', '등급', '전략' 등)를 분석하여 사용자의 질문 목적을 6가지 범주로 분류합니다.
+2. <strong>프롬프트 매핑(get_prompt_by_purpose):</strong> 분석된 목적에 따라 검색 쿼리를 조정하거나 특정 데이터 범주만 참조하도록 프롬프트를 동적으로 변경하여 설계했습니다.
 
-**[결과]**
-[cite_start]비교 분석이나 특정 데이터 조회 시 정확히 해당 범위 내의 정보만을 참조하게 되어 답변의 정확도를 획기적으로 향상시켰습니다. [cite: 1195, 1639]
+<strong>[결과]</strong>
+비교 질문이나 특정 데이터 조회 시 정확히 해당 범위 내의 정보만을 참조하게 되어 답변의 정확도와 마케팅 전략 제안의 신뢰도를 획기적으로 개선했습니다.
+
+---
+
+### 5. 프로젝트 성과 및 회고 (Retrospective)
+
+<strong>[성과: 마케팅의 골든타임을 잡다]</strong>
+* 기존 배치 처리 대비 데이터 반영 속도를 <strong>'1일 → 초 단위(Real-time)'</strong>로 단축하여, 고객 행동에 대한 즉각적인 대응이 가능해졌습니다.
+* 챗봇 인터페이스를 통해 데이터 접근성을 높여, 비기술 직군도 손쉽게 데이터를 활용할 수 있는 기반을 마련했습니다.
+
+<strong>[아쉬움과 반성: "타협은 기술적 승리가 아니다"]</strong>
+가장 아쉬웠던 점은 임베딩 과정에서의 '기술적 타협'입니다. 한 고객의 구매 물품이 계속 누적될 경우 LLM의 컨텍스트 윈도우(Context Window) 한계를 초과하는 문제가 발생했습니다. 이를 해결하기 위해 <strong>구매 물품을 최신순 50개로 제한하는 단순한 로직을 구현했는데, 이는 근본적인 해결책이 아닌 엔지니어로서의 현실적인 타협</strong>이었습니다.
+* <strong>Devel-up Idea:</strong> 향후에는 LangChain의 <strong>Refine 체인</strong>이나 <strong>Map-Reduce</strong> 방식을 도입하여, 단순히 데이터를 잘라내는 것이 아니라 전체 구매 이력을 요약(Summarization)하여 임베딩에 반영하는 방식으로 개선하고 싶습니다.
+
+<strong>[Lesson Learned: Latency와의 싸움]</strong>
+RAG 시스템 운영 중, 질문의 복잡도에 따라 응답 속도가 1분을 넘어가 사용자 경험을 해치는 경우가 발생했습니다.
+* <strong>개선 방향:</strong> 이를 극복하기 위해 Azure AI Search의 <strong>Semantic Caching(의미론적 캐싱)</strong> 기능을 도입하여, 유사한 질문에 대해서는 LLM을 거치지 않고 캐시된 답변을 즉시 반환함으로써 응답 속도와 비용 효율성을 동시에 잡는 방안을 연구하게 되었습니다.
+
+---
+<div style="display: flex; justify-content: space-between; margin-top: 50px;">
+  <a href="/project/4" style="text-decoration: none; font-weight: bold; color: #333;">⬅️ 이전 프로젝트: BERT 영화 추천 시스템</a>
+  <a href="/project/6" style="text-decoration: none; font-weight: bold; color: #333;">다음 프로젝트: AI 수능 영어 플랫폼 ➡️</a>
+</div>
