--- a/public/markdown/project/6.md
+++ b/public/markdown/project/6.md
@@ -1,109 +1,140 @@
 # 💡 AI 수능 영어 학습 플랫폼 '메기스터디'
 
-> **"Azure PaaS를 활용하여 보안, 가용성, AI 기능을 통합한 차세대 학습 플랫폼 구축"**
+> <strong>"Azure PaaS를 활용하여 보안, 가용성, AI 기능을 통합한 차세대 학습 플랫폼 구축"</strong>
 
 ---
 
-### **0. Service Overview**
+### 📑 목차 (Table of Contents)
+1. [서비스 소개](#0-서비스-소개-service-overview)
+2. [프로젝트 배경 및 목표](#1-프로젝트-배경-및-목표)
+3. [시스템 아키텍처](#2-시스템-아키텍처-architecture)
+4. [핵심 구현 내용](#3-핵심-구현-내용-database--security)
+5. [트러블 슈팅](#4-트러블-슈팅-troubleshooting)
+6. [프로젝트 성과 및 회고](#5-프로젝트-성과-및-회고-retrospective)
 
-**"매일 꾸준히, AI와 함께 성장하는 영어 루틴"**
+---
 
-메기스터디는 사용자가 매일 수능 영어 문제를 풀고, AI 튜터에게 즉각적인 피드백을 받아 약점을 보완하는 **맞춤형 학습 플랫폼**입니다.
+### 0. 서비스 소개 (Service Overview)
+
+<strong>"매일 꾸준히, AI와 함께 성장하는 영어 루틴"</strong>
+
+메기스터디는 수능 영어를 준비하는 학생들이 매일 문제를 풀고, AI 튜터에게 즉각적인 피드백을 받아 약점을 보완하는 <strong>맞춤형 학습 플랫폼</strong>입니다.
 
 <div style="display: flex; justify-content: space-between; gap: 10px; margin-top: 20px;">
-  <img src="/images/project/6_service_main.png" width="49%" alt="서비스 메인" />
-  <img src="/images/project/6_qbank.png" width="49%" alt="문제 은행" />
+  <img src="/images/project/6_service_main.png" width="49%" alt="서비스 메인 화면" style="border-radius: 8px; border: 1px solid #eee;" />
+  <img src="/images/project/6_qbank.png" width="49%" alt="문제 은행 화면" style="border-radius: 8px; border: 1px solid #eee;" />
 </div>
 <p align="center" style="color: gray; font-size: 0.9em; margin-top: 5px;">▲ 서비스 랜딩 페이지 및 난이도별 문제 필터링 화면</p>
 
-**[핵심 기능 Flow]**
-1. **문제 풀이:** 사용자는 본인의 수준(Easy/Medium/Hard)에 맞는 기출 문제를 선택하여 풀이합니다.
-2. **AI 분석:** 오답이 발생하면 AI 튜터가 즉시 개입하여 오답 원인을 분석하고 해설을 제공합니다.
-3. **맞춤 학습:** 분석된 데이터를 바탕으로 AI가 사용자의 약점을 보완할 수 있는 문제를 생성합니다.
+<strong>[핵심 기능 Flow]</strong>
+1. <strong>문제 풀이:</strong> 사용자는 본인의 수준(Easy/Medium/Hard)에 맞는 기출 문제를 선택하여 풀이합니다.
+2. <strong>AI 분석:</strong> 오답이 발생하면 AI 튜터가 즉시 개입하여 오답 원인을 분석하고 해설을 제공합니다.
+3. <strong>맞춤 학습:</strong> 분석된 데이터를 바탕으로 AI가 사용자의 약점을 보완할 수 있는 문제를 생성합니다.
 
 <div style="display: flex; justify-content: space-between; gap: 10px; margin-top: 20px;">
-  <img src="/images/project/6_service_ai.png" width="49%" alt="AI 피드백" />
-  <img src="/images/project/6_ai_modal.png" width="49%" alt="약점 분석" />
+  <img src="/images/project/6_service_ai.png" width="49%" alt="AI 피드백" style="border-radius: 8px; border: 1px solid #eee;" />
+  <img src="/images/project/6_ai_modal.png" width="49%" alt="약점 분석" style="border-radius: 8px; border: 1px solid #eee;" />
 </div>
 <p align="center" style="color: gray; font-size: 0.9em; margin-top: 5px;">▲ AI 튜터의 실시간 피드백 및 사용자 약점 분석 리포트</p>
 
+---
 
-**[시나리오 및 문제 정의]**
+### 1. 프로젝트 배경 및 목표
+
+<strong>[시나리오 및 문제 정의]</strong>
 실제 교육 현장에서는 학습 데이터가 로컬 서버(On-Premise)에 고립되어 있고, 문제지나 해설지가 PDF, HWP 같은 비정형 형태로 흩어져 있어 데이터 활용이 어려웠습니다.
-저희 팀은 **"로컬 환경의 데이터를 클라우드로 통합하고, 비정형 데이터를 자산화하여 AI 기반의 맞춤형 학습 서비스를 제공"**하는 것을 목표로 했습니다.
+저희 팀은 <strong>"로컬 환경의 데이터를 클라우드로 통합하고, 비정형 데이터를 자산화하여 AI 기반의 맞춤형 학습 서비스를 제공"</strong>하는 것을 목표로 했습니다.
 
-**[핵심 목표]**
-1.  **데이터 자산화 (Data Assetization):** **Azure Document Intelligence**를 활용하여 비정형 PDF 데이터(문제, 해설, 듣기대본)를 구조화하고 **Azure SQL Database**에 적재하여 활용 가능한 디지털 자산으로 구축.
-2.  **AI 기반 학습 플랫폼 구현:** 구축된 문제은행 데이터를 바탕으로 학생 수준에 맞는 문제를 추천하고 피드백을 제공하는 **Intelligent App** 개발.
-3.  **하이브리드 클라우드 이관:** 로컬 SQL Server의 데이터를 **Azure SQL Database**로 무중단 이관하여 운영 효율성 및 확장성 확보.
-4.  **엔터프라이즈급 데이터 보안:** TDE, DDM 등 Azure PaaS의 보안 기능을 활용해 **개인정보 보호 및 데이터 무결성** 완벽 보장.
+<strong>[핵심 목표]</strong>
+1. <strong>데이터 자산화 (Data Assetization):</strong> <strong>Azure Document Intelligence</strong>를 활용하여 비정형 PDF 데이터(문제, 해설, 듣기대본)를 구조화하고 <strong>Azure SQL Database</strong>에 적재하여 활용 가능한 디지털 자산으로 구축.
+2. <strong>AI 기반 학습 플랫폼 구현:</strong> 구축된 문제은행 데이터를 바탕으로 학생 수준에 맞는 문제를 추천하고 피드백을 제공하는 <strong>Intelligent App</strong> 개발.
+3. <strong>하이브리드 클라우드 이관:</strong> 로컬 SQL Server의 데이터를 <strong>Azure SQL Database</strong>로 무중단 이관하여 운영 효율성 및 확장성 확보.
+4. <strong>엔터프라이즈급 데이터 보안:</strong> TDE, DDM 등 Azure PaaS의 보안 기능을 활용해 <strong>개인정보 보호 및 데이터 무결성</strong> 완벽 보장.
 
 ---
 
-### **2. 시스템 아키텍처 및 데이터 파이프라인**
+### 2. 시스템 아키텍처 및 데이터 파이프라인
 
 ![전체 시스템 아키텍처](/images/project/6_arch.png)
-*(▲ 전체 시스템 아키텍처)*
+(▲ 전체 시스템 아키텍처)
 
-**[Data Extraction with Document Intelligence]**
+<strong>[Data Extraction with Document Intelligence]</strong>
 
 ![데이터 전처리 파이프라인](/images/project/6_doc_intel.png)
-*(▲ Azure Document Intelligence를 활용한 비정형 데이터 처리 흐름)*
+(▲ Azure Document Intelligence를 활용한 비정형 데이터 처리 흐름)
 
-* **비정형 데이터 구조화:** 수능 기출 문제 PDF는 텍스트, 이미지, 표, 다단 편집이 복잡하게 섞여 있어 일반적인 OCR로는 데이터화가 불가능했습니다.
-* **ETL 구현:** **Azure Document Intelligence**의 레이아웃 분석 기능을 활용하여 문서의 구조를 인식하고, 문제(Question), 지문(Passage), 선택지(Options), 해설(Explanation)을 각각 분리하여 정형화된 JSON 데이터로 변환했습니다.
-* **데이터 적재:** 변환된 데이터는 **Azure SQL Database**에 적재되어, 서비스 내 문제 은행(Question Bank) 기능과 AI 모델의 지식 베이스(Knowledge Base)로 활용되었습니다.
+* <strong>비정형 데이터 구조화:</strong> 수능 기출 문제 PDF는 텍스트, 이미지, 표, 다단 편집이 복잡하게 섞여 있어 일반적인 OCR로는 데이터화가 불가능했습니다.
+* <strong>ETL 구현:</strong> <strong>Azure Document Intelligence</strong>의 레이아웃 분석 기능을 활용하여 문서의 구조를 인식하고, 문제(Question), 지문(Passage), 선택지(Options), 해설(Explanation)을 각각 분리하여 정형화된 JSON 데이터로 변환했습니다.
+* <strong>데이터 적재:</strong> 변환된 데이터는 <strong>Azure SQL Database</strong>에 적재되어, 서비스 내 문제 은행(Question Bank) 기능과 AI 모델의 지식 베이스(Knowledge Base)로 활용되었습니다.
 
-**[Service Layer]**
-* **Application:** Next.js와 FastAPI를 연동하여 사용자 대시보드 및 AI 튜터 서비스 구현.
+<strong>[Service Layer]</strong>
+* <strong>Application:</strong> Next.js와 FastAPI를 연동하여 사용자 대시보드 및 AI 튜터 서비스 구현.
 
 ---
 
-### **3. 핵심 구현 내용 (Database & Security)**
+### 3. 핵심 구현 내용 (Database & Security)
 
-저는 **Infra & Security** 담당자로서, 서비스의 안정성과 데이터 보안을 책임지는 아키텍처를 설계했습니다.
+저는 <strong>Infra & Security</strong> 담당자로서, 서비스의 안정성과 데이터 보안을 책임지는 아키텍처를 설계했습니다.
 
-#### **(1) 무중단 마이그레이션 (Local to Cloud)**
+#### (1) 무중단 마이그레이션 (Local to Cloud)
 ![DB 마이그레이션 구조](/images/project/6_dms.png)
-*(▲ Azure DMS를 활용한 이관 구조)*
+(▲ Azure DMS를 활용한 이관 구조)
 
-* **구현:** **Azure Database Migration Service(DMS)**를 사용하여 로컬 SQL Server와 Azure SQL 간의 실시간 데이터 동기화 파이프라인을 구축했습니다.
-* **성과:** 서비스 운영 중에도 데이터 변경분(CDC)을 실시간으로 반영하여, 최종 전환 시 **서비스 다운타임(Downtime)을 제로에 가깝게** 최소화했습니다.
+* <strong>구현:</strong> <strong>Azure Database Migration Service(DMS)</strong>를 사용하여 로컬 SQL Server와 Azure SQL 간의 실시간 데이터 동기화 파이프라인을 구축했습니다.
+* <strong>성과:</strong> 서비스 운영 중에도 데이터 변경분(CDC)을 실시간으로 반영하여, 최종 전환 시 <strong>서비스 다운타임(Downtime)을 제로에 가깝게</strong> 최소화했습니다.
 
-#### **(2) 데이터 보안 및 규정 준수 (Compliance & HA)**
+#### (2) 데이터 보안 및 규정 준수 (Compliance & HA)
 ![보안 및 고가용성 설정](/images/project/6_security.png)
-*(▲ DDM, TDE, 백업 설정 화면)*
+(▲ DDM, TDE, 백업 설정 화면)
 
-* **동적 데이터 마스킹 (DDM):** `Email` 등 민감한 개인정보 컬럼에 마스킹 정책을 적용하여, 권한이 없는 관리자나 애플리케이션에서는 `aXXX@XXXX.com` 형태로만 보이도록 조치했습니다.
-* **투명한 데이터 암호화 (TDE):** 데이터베이스 파일, 로그, 백업 파일 등 디스크에 저장되는 모든 데이터를 실시간으로 암호화하여 물리적 탈취 시에도 데이터를 보호했습니다.
-* **자동 백업 및 PITR:** Azure SQL의 자동 백업 기능을 활성화하고, 14일간의 시점 복구(Point-In-Time Restore)를 구성하여 데이터 손실 사고에 대비했습니다.
-* **무중단 서비스 운영 (Failover):** 특정 서버나 데이터 센터에 장애가 발생하더라도, 서비스 중단 없이 자동으로 예비 서버로 전환(Failover)되는 **Auto-Failover Group**을 구성하여 **99.99% 이상의 가용성**을 보장했습니다.
+* <strong>동적 데이터 마스킹 (DDM):</strong> Email 등 민감한 개인정보 컬럼에 마스킹 정책을 적용하여, 권한이 없는 관리자나 애플리케이션에서는 aXXX@XXXX.com 형태로만 보이도록 조치했습니다.
+* <strong>투명한 데이터 암호화 (TDE):</strong> 데이터베이스 파일, 로그, 백업 파일 등 디스크에 저장되는 모든 데이터를 실시간으로 암호화하여 물리적 탈취 시에도 데이터를 보호했습니다.
+* <strong>자동 백업 및 PITR:</strong> Azure SQL의 자동 백업 기능을 활성화하고, 14일간의 시점 복구(Point-In-Time Restore)를 구성하여 데이터 손실 사고에 대비했습니다.
+* <strong>무중단 서비스 운영 (Failover):</strong> 특정 서버나 데이터 센터에 장애가 발생하더라도, 서비스 중단 없이 자동으로 예비 서버로 전환(Failover)되는 <strong>Auto-Failover Group</strong>을 구성하여 <strong>99.99% 이상의 가용성</strong>을 보장했습니다.
 
-#### **(3) 네트워크 격리 및 접근 제어**
+#### (3) 네트워크 격리 및 접근 제어
 ![VNet 보안 아키텍처](/images/project/6_vnet.png)
-*(▲ VNet과 Private Endpoint 구성)*
+(▲ VNet과 Private Endpoint 구성)
 
-* **VNet Integration:** 데이터베이스를 **Azure VNet** 내부에 배치하여 공용 인터넷을 통한 직접 접근을 원천 차단했습니다.
-* **RBAC (역할 기반 접근 제어):** 웹 애플리케이션 계정에는 `SELECT`, `INSERT`, `UPDATE` 권한만 부여하고, `DELETE`, `DROP` 권한은 회수하여 해킹 시 데이터 파괴 위험을 방지했습니다.
+* <strong>VNet Integration:</strong> 데이터베이스를 <strong>Azure VNet</strong> 내부에 배치하여 공용 인터넷을 통한 직접 접근을 원천 차단했습니다.
+* <strong>RBAC (역할 기반 접근 제어):</strong> 웹 애플리케이션 계정에는 SELECT, INSERT, UPDATE 권한만 부여하고, DELETE, DROP 권한은 회수하여 해킹 시 데이터 파괴 위험을 방지했습니다.
 
 ---
 
-### **4. 트러블 슈팅 (Troubleshooting)**
+### 4. 트러블 슈팅 (Troubleshooting)
 
-#### **🚨 실전 보안 위협 대응: "1%의 가능성도 차단하라"**
+#### 🚨 실전 보안 위협 대응: "1%의 가능성도 차단하라"
 ![보안 위협 탐지 로그](/images/project/6_log.png)
-*(▲ Log Analytics의 위협 탐지 로그)*
+(▲ Log Analytics의 위협 탐지 로그)
 
-**[상황: 의문의 경고 알림]**
-프로젝트 마무리 단계에서 설정해둔 위협 탐지(Threat Detection) 알람이 울렸습니다. 확인 결과, 알 수 없는 IP에서 관리자 계정으로 `WHERE 1=1` 패턴을 포함하여 시스템 테이블(`sys.tables`)을 조회하는 쿼리가 다수 발견되었습니다.
+<strong>[상황: 의문의 경고 알림]</strong>
+프로젝트 마무리 단계에서 설정해둔 위협 탐지(Threat Detection) 알람이 울렸습니다. 확인 결과, 알 수 없는 IP에서 관리자 계정으로 WHERE 1=1 패턴을 포함하여 시스템 테이블(sys.tables)을 조회하는 쿼리가 다수 발견되었습니다.
 
-**[분석 및 의사결정]**
+<strong>[분석 및 의사결정]</strong>
 초기에는 Azure 내부 리소스(Power BI 등)가 메타데이터를 수집하는 과정에서 발생한 정상적인 쿼리일 가능성도 있어 보였습니다. 하지만 정확한 판단을 위해 보안 실무자에게 자문을 구했습니다.
-> *"내부 쿼리일 수도 있지만, 공격자가 DB 구조를 파악하기 위해 수행하는 **정찰(Reconnaissance) 단계**와 패턴이 매우 유사합니다."*
+> "내부 쿼리일 수도 있지만, 공격자가 DB 구조를 파악하기 위해 수행하는 <strong>정찰(Reconnaissance) 단계</strong>와 패턴이 매우 유사합니다."
 
-이 조언을 듣고 **"1%의 공격 가능성이라도 있다면 예방하는 것이 보안의 첫걸음"**이라는 원칙하에 즉각적인 방어 조치에 들어갔습니다.
+이 조언을 듣고 <strong>"1%의 공격 가능성이라도 있다면 예방하는 것이 보안의 첫걸음"</strong>이라는 원칙하에 즉각적인 방어 조치에 들어갔습니다.
 
-**[조치 및 결과]**
-1.  **방화벽 차단:** Azure Firewall 정책을 업데이트하여 해당 IP 대역의 접근을 영구 차단했습니다.
-2.  **권한 축소 (Least Privilege):** 만에 하나 애플리케이션 계정이 탈취되더라도 DB를 삭제할 수 없도록, 연결 계정에서 `DROP`, `TRUNCATE` 권한을 즉시 회수하고 `SELECT`, `INSERT` 등 필수 권한만 남겼습니다.
-3.  **경고 규칙 최적화:** 향후 유사한 혼동을 막기 위해, 단순 조회와 실제 공격 패턴(SQL Injection)을 더 정교하게 구분할 수 있도록 경고 규칙(Alert Rule)을 세분화했습니다.
+<strong>[조치 및 결과]</strong>
+1. <strong>방화벽 차단:</strong> Azure Firewall 정책을 업데이트하여 해당 IP 대역의 접근을 영구 차단했습니다.
+2. <strong>권한 축소 (Least Privilege):</strong> 만에 하나 애플리케이션 계정이 탈취되더라도 DB를 삭제할 수 없도록, 연결 계정에서 DROP, TRUNCATE 권한을 즉시 회수하고 SELECT, INSERT 등 필수 권한만 남겼습니다.
+3. <strong>경고 규칙 최적화:</strong> 향후 유사한 혼동을 막기 위해, 단순 조회와 실제 공격 패턴(SQL Injection)을 더 정교하게 구분할 수 있도록 경고 규칙(Alert Rule)을 세분화했습니다.
+
+---
+
+### 5. 프로젝트 성과 및 회고 (Retrospective)
+
+<strong>[성과: 사용자 만족도가 증명한 퀄리티]</strong>
+교육 과정의 파이널 프로젝트로서, 실제 사용자가 불편함 없이 사용할 수 있는 수준의 UI/UX와 기능적 완성도를 목표로 했습니다. 그 결과 타 프로젝트 대비 높은 완성도의 결과물을 만들어냈고, 실제 시연 과정에서 사용자들에게 "가장 사용해보고 싶은 서비스"라는 호평을 받으며 큰 성취감을 느꼈습니다.
+
+<strong>[깨달음: "기능 구현이 서비스의 전부는 아니다"]</strong>
+하지만 발표 직후 받은 피드백은 저에게 새로운 충격을 주었습니다. "디지털 소외 계층을 위한 웹 접근성(Accessibility)은 고려되었는가?", "Azure 리소스 비용을 감당할 수익 모델(BM)은 무엇인가?"라는 질문에 명쾌하게 답하지 못했기 때문입니다.
+* <strong>Reflection:</strong> 좋은 기술과 기능만으로는 지속 가능한 서비스가 될 수 없음을 깨달았습니다.
+* <strong>Future Action:</strong> 이 경험을 계기로 <strong>WCAG(웹 접근성 가이드라인) 준수</strong>를 통한 포용성 확보와, <strong>FinOps(클라우드 비용 최적화)</strong> 및 <strong>Freemium 모델</strong> 설계를 통한 서비스의 지속 가능성을 함께 고민하는 넓은 시야를 갖게 되었습니다.
+
+---
+<div style="display: flex; justify-content: space-between; margin-top: 50px;">
+  <a href="/project/5" style="text-decoration: none; font-weight: bold; color: #333;">⬅️ 이전 프로젝트: 실시간 고객 분석 시스템</a>
+  <span style="color: #aaa;">다음 프로젝트 없음 🚫</span>
+</div>
