Update: Apply all recent changes and fixes

--- a/public/markdown/project/5.md
+++ b/public/markdown/project/5.md
@@ -36,7 +36,7 @@
 ### 1. 프로젝트 배경 및 목표
 
 <strong>[문제 정의: 리텐션의 경제성]</strong>
-하버드 비즈니스 리뷰에 따르면 신규 고객 유치 비용은 기존 고객 유지 비용보다 5~25배 더 높습니다. 기존 고객 유지율을 5%만 높여도 기업 이익은 25~95% 증가할 수 있습니다. 하지만 기존의 배치(Batch) 처리 방식은 분석 결과가 도출되기까지 시차가 발생하여 즉각적인 리텐션 마케팅이 불가능했습니다.
+하버드 비즈니스 리뷰에 따르면 신규 고객 유치 비용은 기존 고객 유지 비용보다 <strong>5-25배</strong> 더 높습니다. 기존 고객 유지율을 5%만 높여도 기업 이익은 <strong>25-95%</strong> 증가할 수 있습니다. 하지만 기존의 배치(Batch) 처리 방식은 분석 결과가 도출되기까지 시차가 발생하여 즉각적인 리텐션 마케팅이 불가능했습니다.
 
 <strong>[핵심 목표]</strong>
 1. <strong>실시간 파이프라인 구축:</strong> 데이터 발생부터 분석까지의 지연(Latency)을 최소화하여 고객 행동에 즉각 대응.
