Update: Refine project descriptions and images style

--- a/public/markdown/project/4.md
+++ b/public/markdown/project/4.md
@@ -19,8 +19,8 @@
 
 이 서비스는 사용자가 선호하는 영화를 입력하면, AI가 해당 영화들의 맥락(Context)을 분석하여 다음에 시청할 영화 10편을 추천해줍니다. 단순한 장르 매칭이 아니라, 사용자의 취향 시퀀스를 분석하여 정교한 추천 결과를 제공합니다.
 
-![서비스 검색 및 추천 결과 화면](/images/project/4_service.png)
-(▲ Flask로 구현된 영화 추천 웹 서비스 시연 화면)
+<img src="/images/project/4_service.png" width="100%" alt="서비스 검색 및 추천 결과 화면" style="border-radius: 8px; border: 1px solid #eee;" />
+<p align="center" style="color: gray; font-size: 0.9em; margin-top: 5px;">▲ Flask로 구현된 영화 추천 웹 서비스 시연 화면</p>
 
 <strong>[핵심 기능 Flow]</strong>
 1. <strong>선호 입력:</strong> 사용자가 웹(Flask)에서 선호하는 영화를 검색하여 입력합니다.
@@ -43,8 +43,8 @@ OTT 시장의 폭발적인 성장으로 콘텐츠 수는 급증했지만, 사용
 
 ### 2. 시스템 아키텍처 (Architecture)
 
-![전체 시스템 아키텍처](/images/project/4_arch.png)
-(▲ Azure Databricks와 Flask를 연동한 전체 시스템 아키텍처)
+<img src="/images/project/4_arch.png" width="100%" alt="전체 시스템 아키텍처" style="border-radius: 8px; border: 1px solid #eee;" />
+<p align="center" style="color: gray; font-size: 0.9em; margin-top: 5px;">▲ Azure Databricks와 Flask를 연동한 전체 시스템 아키텍처</p>
 
 저는 이 프로젝트에서 <strong>PM(Project Manager)</strong>을 맡아 전체 일정을 조율하고, <strong>MLOps 엔지니어링</strong> 파트를 담당하여 모델과 웹 서비스를 연결하는 다리 역할을 수행했습니다.
 
@@ -55,8 +55,8 @@ OTT 시장의 폭발적인 성장으로 콘텐츠 수는 급증했지만, 사용
 #### (1) MLflow 기반 모델 서빙 및 API 구축
 데이터 사이언스 팀이 개발한 모델을 실제 서비스에서 사용할 수 있도록 배포하는 과정을 전담했습니다.
 
-![MLflow 서빙 로그](/images/project/4_serving.png)
-(▲ MLflow Model Serving Endpoint 구성 및 로그)
+<img src="/images/project/4_serving.png" width="100%" alt="MLflow 서빙 로그" style="border-radius: 8px; border: 1px solid #eee;" />
+<p align="center" style="color: gray; font-size: 0.9em; margin-top: 5px;">▲ MLflow Model Serving Endpoint 구성 및 로그</p>
 
 * <strong>Serving Endpoint 구성:</strong> Databricks 내에 <strong>Model Serving Endpoint</strong>를 생성하여, 학습된 BERT 모델을 REST API 형태로 호출할 수 있는 환경을 구축했습니다.
 * <strong>입출력 스키마 정의:</strong> 모델이 요구하는 텐서(Tensor) 입력 형태와 웹 서비스의 JSON 데이터 형식을 맞추기 위해 입출력 스키마를 정의하고 데이터 전처리 파이프라인을 연결했습니다.
@@ -76,8 +76,8 @@ OTT 시장의 폭발적인 성장으로 콘텐츠 수는 급증했지만, 사용
 ### 4. 프로젝트 성과 및 회고 (Retrospective)
 
 <strong>[성과: 압도적인 추천 정확도 달성]</strong>
-![모델 성능 비교표](/images/project/4_perf.png)
-(▲ BERT 모델의 압도적인 성능 지표)
+<img src="/images/project/4_perf.png" width="100%" alt="모델 성능 비교표" style="border-radius: 8px; border: 1px solid #eee;" />
+<p align="center" style="color: gray; font-size: 0.9em; margin-top: 5px;">▲ BERT 모델의 압도적인 성능 지표</p>
 
 * 다양한 모델(ALS, XGBoost, Hybrid 등)을 실험한 결과, 시청 흐름을 학습한 BERT 모델이 <strong>Precision@10 0.86, Recall@10 0.86</strong>을 기록하며 기존 베이스라인 대비 획기적인 성능 향상을 이뤄냈습니다.
 
@@ -90,6 +90,6 @@ OTT 시장의 폭발적인 성장으로 콘텐츠 수는 급증했지만, 사용
 
 ---
 <div style="display: flex; justify-content: space-between; margin-top: 50px;">
-  <span style="color: #aaa;">🚫 이전 프로젝트 없음</span>
+  <a href="/project/3" style="text-decoration: none; font-weight: bold; color: #333;">⬅️ 이전 프로젝트: 권역 외상 센터 입지 선정</a>
   <a href="/project/5" style="text-decoration: none; font-weight: bold; color: #333;">다음 프로젝트: 실시간 고객 분석 시스템 ➡️</a>
 </div>
