--- a/public/markdown/project/5.md
+++ b/public/markdown/project/5.md
@@ -20,11 +20,11 @@
 
 본 시스템은 이커머스 환경에서 발생하는 주문 로그를 실시간으로 수집·가공하고, 머신러닝 모델을 통해 고객 등급을 즉시 업데이트합니다. 마케터는 복잡한 쿼리 없이 챗봇을 통해 실시간 지표를 조회하고 개인화된 마케팅 전략을 즉각 제안받을 수 있습니다.
 
-![실시간 데이터 유입 및 수집](/images/project/5_flow.png)
-(▲ Flask 기반 주문 시뮬레이션 및 실시간 데이터 수집 흐름)
+<img src="/images/project/5_flow.png" width="100%" alt="실시간 데이터 유입 및 수집" style="border-radius: 8px; border: 1px solid #eee;" />
+<p align="center" style="color: gray; font-size: 0.9em; margin-top: 5px;">▲ Flask 기반 주문 시뮬레이션 및 실시간 데이터 수집 흐름</p>
 
-![RAG 응답 인터페이스](/images/project/5_rag_ex.png)
-(▲ RAG 기반의 자연어 데이터 조회 및 마케팅 인사이트 도출 화면)
+<img src="/images/project/5_rag_ex.png" width="100%" alt="RAG 응답 인터페이스" style="border-radius: 8px; border: 1px solid #eee;" />
+<p align="center" style="color: gray; font-size: 0.9em; margin-top: 5px;">▲ RAG 기반의 자연어 데이터 조회 및 마케팅 인사이트 도출 화면</p>
 
 <strong>[핵심 기능 흐름]</strong>
 1. <strong>실시간 수집:</strong> 대규모 구매 로그를 Azure Event Hub로 수집하고 Stream Analytics로 정제합니다.
@@ -47,8 +47,8 @@
 
 ### 2. 시스템 아키텍처 (Architecture)
 
-![전체 시스템 아키텍처](/images/project/5_arch.png)
-(▲ Azure PaaS 기반의 실시간 데이터 처리 아키텍처)
+<img src="/images/project/5_arch.png" width="100%" alt="전체 시스템 아키텍처" style="border-radius: 8px; border: 1px solid #eee;" />
+<p align="center" style="color: gray; font-size: 0.9em; margin-top: 5px;">▲ Azure PaaS 기반의 실시간 데이터 처리 아키텍처</p>
 
 본 프로젝트는 UCI Machine Learning Repository의 Online Retail 데이터를 활용하여 약 54만 건의 실제 거래 데이터를 실시간 스트리밍 환경에서 처리할 수 있도록 설계되었습니다. Azure의 서버리스 기술을 적극 활용하여 데이터 파이프라인의 자동화를 구현했습니다.
 
@@ -57,8 +57,8 @@
 ### 3. 핵심 구현 내용 (Real-time & RAG)
 
 #### (1) 머신러닝 모델 고도화: K-Means에서 GMM으로
-![K-Means 분석 결과](/images/project/5_modeling_kmeans.png)
-(▲ K-Means 알고리즘 설명 및 엘보우 포인트 분석 과정)
+<img src="/images/project/5_modeling_kmeans.png" width="100%" alt="K-Means 분석 결과" style="border-radius: 8px; border: 1px solid #eee;" />
+<p align="center" style="color: gray; font-size: 0.9em; margin-top: 5px;">▲ K-Means 알고리즘 설명 및 엘보우 포인트 분석 과정</p>
 
 * <strong>K-Means의 한계:</strong> 초기에는 구형(Spherical) 군집 형성에 강한 K-Means를 적용했으나, 고객의 가중치 분포가 타원형(Elliptical)을 띠는 실제 특성을 반영하지 못해 경계면 오분류가 발생했습니다.
 * <strong>GMM(Gaussian Mixture Model) 최종 채택:</strong> 데이터의 확률 분포를 기반으로 하는 GMM을 도입하여 비구형 분포 문제를 해결했습니다. 특히 <strong>소프트 클러스터링</strong>을 통해 특정 군집에 속할 확률(Prob_3, Prob_4)을 도출함으로써 마케팅 우선순위를 정밀하게 산정했습니다.
@@ -68,8 +68,8 @@
 * <strong>Azure Functions 트리거:</strong> Cosmos DB의 <strong>Change Feed</strong> 기능을 활용하여 주문 로그 적재 즉시 분석 함수가 실행되도록 구현했습니다. 이 함수는 해당 고객의 누적 RFM 데이터를 재계산하고 등급을 즉시 갱신합니다.
 
 #### (3) RAG(검색 증강 생성) 시스템 구축
-![RAG 아키텍처](/images/project/5_rag.png)
-(▲ 실시간 데이터와 LLM을 결합한 RAG 시스템 구조)
+<img src="/images/project/5_rag.png" width="100%" alt="RAG 아키텍처" style="border-radius: 8px; border: 1px solid #eee;" />
+<p align="center" style="color: gray; font-size: 0.9em; margin-top: 5px;">▲ 실시간 데이터와 LLM을 결합한 RAG 시스템 구조</p>
 
 * <strong>벡터 임베딩:</strong> 갱신된 고객 등급과 구매 내역 정보를 텍스트 데이터로 변환하여 벡터 DB에 실시간 저장했습니다.
 * <strong>질의 응답 로직:</strong> 마케터가 자연어로 질문하면 관련 데이터를 추출해 GPT 프롬프트의 컨텍스트로 주입하여 할루시네이션(환각) 없는 답변을 생성합니다.
@@ -81,7 +81,7 @@
 #### 🚨 RAG 검색 정확도 개선: "의도 기반 프롬프트 분기 전략"
 
 <div style="text-align: center; margin: 20px 0;">
-  <img src="/images/project/5_trouble_code.png" width="60%" alt="의도 파악 및 프롬프트 분기 로직" style="border-radius: 8px; border: 1px solid #ddd;" />
+  <img src="/images/project/5_trouble_code.png" width="80%" alt="의도 파악 및 프롬프트 분기 로직" style="border-radius: 8px; border: 1px solid #ddd;" />
   <p style="color: gray; font-size: 0.9em; margin-top: 5px;">▲ 질문의 의도를 분석하여 적절한 프롬프트를 선택하는 파이썬 로직</p>
 </div>
 
