--- a/public/markdown/project/6.md
+++ b/public/markdown/project/6.md
@@ -55,13 +55,13 @@
 
 ### 2. 시스템 아키텍처 및 데이터 파이프라인
 
-![전체 시스템 아키텍처](/images/project/6_arch.png)
-(▲ 전체 시스템 아키텍처)
+<img src="/images/project/6_arch.png" width="100%" alt="전체 시스템 아키텍처" style="border-radius: 8px; border: 1px solid #eee;" />
+<p align="center" style="color: gray; font-size: 0.9em; margin-top: 5px;">▲ 전체 시스템 아키텍처</p>
 
 <strong>[Data Extraction with Document Intelligence]</strong>
 
-![데이터 전처리 파이프라인](/images/project/6_doc_intel.png)
-(▲ Azure Document Intelligence를 활용한 비정형 데이터 처리 흐름)
+<img src="/images/project/6_doc_intel.png" width="100%" alt="데이터 전처리 파이프라인" style="border-radius: 8px; border: 1px solid #eee;" />
+<p align="center" style="color: gray; font-size: 0.9em; margin-top: 5px;">▲ Azure Document Intelligence를 활용한 비정형 데이터 처리 흐름</p>
 
 * <strong>비정형 데이터 구조화:</strong> 수능 기출 문제 PDF는 텍스트, 이미지, 표, 다단 편집이 복잡하게 섞여 있어 일반적인 OCR로는 데이터화가 불가능했습니다.
 * <strong>ETL 구현:</strong> <strong>Azure Document Intelligence</strong>의 레이아웃 분석 기능을 활용하여 문서의 구조를 인식하고, 문제(Question), 지문(Passage), 선택지(Options), 해설(Explanation)을 각각 분리하여 정형화된 JSON 데이터로 변환했습니다.
@@ -77,15 +77,15 @@
 저는 <strong>Infra & Security</strong> 담당자로서, 서비스의 안정성과 데이터 보안을 책임지는 아키텍처를 설계했습니다.
 
 #### (1) 무중단 마이그레이션 (Local to Cloud)
-![DB 마이그레이션 구조](/images/project/6_dms.png)
-(▲ Azure DMS를 활용한 이관 구조)
+<img src="/images/project/6_dms.png" width="100%" alt="DB 마이그레이션 구조" style="border-radius: 8px; border: 1px solid #eee;" />
+<p align="center" style="color: gray; font-size: 0.9em; margin-top: 5px;">▲ Azure DMS를 활용한 이관 구조</p>
 
 * <strong>구현:</strong> <strong>Azure Database Migration Service(DMS)</strong>를 사용하여 로컬 SQL Server와 Azure SQL 간의 실시간 데이터 동기화 파이프라인을 구축했습니다.
 * <strong>성과:</strong> 서비스 운영 중에도 데이터 변경분(CDC)을 실시간으로 반영하여, 최종 전환 시 <strong>서비스 다운타임(Downtime)을 제로에 가깝게</strong> 최소화했습니다.
 
 #### (2) 데이터 보안 및 규정 준수 (Compliance & HA)
-![보안 및 고가용성 설정](/images/project/6_security.png)
-(▲ DDM, TDE, 백업 설정 화면)
+<img src="/images/project/6_security.png" width="100%" alt="보안 및 고가용성 설정" style="border-radius: 8px; border: 1px solid #eee;" />
+<p align="center" style="color: gray; font-size: 0.9em; margin-top: 5px;">▲ DDM, TDE, 백업 설정 화면</p>
 
 * <strong>동적 데이터 마스킹 (DDM):</strong> Email 등 민감한 개인정보 컬럼에 마스킹 정책을 적용하여, 권한이 없는 관리자나 애플리케이션에서는 aXXX@XXXX.com 형태로만 보이도록 조치했습니다.
 * <strong>투명한 데이터 암호화 (TDE):</strong> 데이터베이스 파일, 로그, 백업 파일 등 디스크에 저장되는 모든 데이터를 실시간으로 암호화하여 물리적 탈취 시에도 데이터를 보호했습니다.
@@ -93,8 +93,8 @@
 * <strong>무중단 서비스 운영 (Failover):</strong> 특정 서버나 데이터 센터에 장애가 발생하더라도, 서비스 중단 없이 자동으로 예비 서버로 전환(Failover)되는 <strong>Auto-Failover Group</strong>을 구성하여 <strong>99.99% 이상의 가용성</strong>을 보장했습니다.
 
 #### (3) 네트워크 격리 및 접근 제어
-![VNet 보안 아키텍처](/images/project/6_vnet.png)
-(▲ VNet과 Private Endpoint 구성)
+<img src="/images/project/6_vnet.png" width="100%" alt="VNet 보안 아키텍처" style="border-radius: 8px; border: 1px solid #eee;" />
+<p align="center" style="color: gray; font-size: 0.9em; margin-top: 5px;">▲ VNet과 Private Endpoint 구성</p>
 
 * <strong>VNet Integration:</strong> 데이터베이스를 <strong>Azure VNet</strong> 내부에 배치하여 공용 인터넷을 통한 직접 접근을 원천 차단했습니다.
 * <strong>RBAC (역할 기반 접근 제어):</strong> 웹 애플리케이션 계정에는 SELECT, INSERT, UPDATE 권한만 부여하고, DELETE, DROP 권한은 회수하여 해킹 시 데이터 파괴 위험을 방지했습니다.
@@ -104,8 +104,8 @@
 ### 4. 트러블 슈팅 (Troubleshooting)
 
 #### 🚨 실전 보안 위협 대응: "1%의 가능성도 차단하라"
-![보안 위협 탐지 로그](/images/project/6_log.png)
-(▲ Log Analytics의 위협 탐지 로그)
+<img src="/images/project/6_log.png" width="100%" alt="보안 위협 탐지 로그" style="border-radius: 8px; border: 1px solid #eee;" />
+<p align="center" style="color: gray; font-size: 0.9em; margin-top: 5px;">▲ Log Analytics의 위협 탐지 로그</p>
 
 <strong>[상황: 의문의 경고 알림]</strong>
 프로젝트 마무리 단계에서 설정해둔 위협 탐지(Threat Detection) 알람이 울렸습니다. 확인 결과, 알 수 없는 IP에서 관리자 계정으로 WHERE 1=1 패턴을 포함하여 시스템 테이블(sys.tables)을 조회하는 쿼리가 다수 발견되었습니다.
